--- a/index.html
+++ b/index.html
@@ -27,8 +27,13 @@
     // 🧠 Examples of usage:
     // processSingleLearner({ name: "Elisabeth", lovesJS: 1 }) // should return { name: "Elisabeth", lovesJS: true }
     // processSingleLearner({ name: "Pete", age: 23, lovesJS: 0 }) // should return { name: "Pete", age: 23, lovesJS: false }
-    const processSingleLearner = () => {
-
+    const processSingleLearner = (learner) => {
+      if (learner.lovesJS === 0) {
+        learner.lovesJS = false;
+      } else if (learner.lovesJS === 1) {
+        learner.lovesJS = true;
+      }
+      return learner;
     }
 
     // 👉 CHALLENGE 2
@@ -41,8 +46,16 @@
     // ❗ Notes:
     // 🧠 There are many approaches to this problem: using a loop, using forEach, using map...
     // 🧠 Solve this challenge using a for/in loop or a for loop.
-    const processLearnersLoop = () => {
-
+    const processLearnersLoop = (learners) => {
+      for (let prop in learners) {
+        const learner = learners[prop];
+        if (learner.lovesJS === 0) {
+          learner.lovesJS = false;
+      }   else if (learner.lovesJS === 1) {
+          learner.lovesJS = true;
+      }
+    }
+      return learners;
     }
 
     // 👉 CHALLENGE 3
@@ -51,8 +64,16 @@
     // ❗ Notes:
     // 🧠 Solve this challenge using the forEach method of the learners array.
     // 🧠 Use arrow functions whenever possible.
-    const processLearnerForEach = () => {
-
+    const processLearnerForEach = (learners) => {
+      result = [];
+      learners.forEach((learner => {
+        if (learner.lovesJS === 0) {
+          learner.lovesJS = false;
+      }   else if (learner.lovesJS === 1) {
+          learner.lovesJS = true;
+      }
+      }))
+      return learners;
     }
 
     // 👉 CHALLENGE 4
@@ -61,8 +82,16 @@
     // ❗ Notes:
     // 🧠 Solve this challenge using the map method of the learners array.
     // 🧠 Use arrow functions.
-    const processLearnerMap = () => {
-
+    const processLearnerMap = (learners) => {
+      let result = learners.map((learner) => {
+        if (learner.lovesJS === 0) {
+          learner.lovesJS = false;
+      }   else if (learner.lovesJS === 1) {
+          learner.lovesJS = true;
+      }
+      return learner;
+      })
+      return result;
     }
 
     // 👉 CHALLENGE 5
@@ -73,8 +102,17 @@
     // ❗ Notes:
     // 🧠 Solve this challenge using the forEach method of the learners array.
     // 🧠 You will need to declare a result array into which you push learners from inside your forEach loop.
-    const getJavaScriptLoversForEach = () => {
-
+    const getJavaScriptLoversForEach = (learners) => {
+      result = [];
+      learners.forEach((learner) => {
+        if (learner.lovesJS === true || learner.lovesJS === 1) {
+          result.push(learner);
+        } 
+      })
+      if (!result.length) {
+        return "no JS lovers here!";
+      }
+      return result;
     }
 
     // 👉 CHALLENGE 6
@@ -82,8 +120,10 @@
     // 🧠 It should work exactly the same as the getJavaScriptLoversForEach function above.
     // ❗ Notes:
     // 🧠 Solve this challenge using the filter method of the learners array.
-    const getJavaScriptLoversFilter = () => {
-
+    const getJavaScriptLoversFilter = (learners) => {
+      let filtered = (learner) => {
+        
+      }
     }
 
     // 👉 CHALLENGE 7
