--- a/index.html
+++ b/index.html
@@ -166,7 +166,17 @@
     // ❗ Notes:
     // 🧠 Solve this problem using rest parameters and map.
     const checkInts = ( ...args) => {
-      
+      if (!args.length) {
+          return "pass some arguments, yo!"
+        }
+      let result = args.map((arg) => {
+        if(arg % 2 === 0) {
+          return "even"
+        } else if(arg % 2 === 1) {
+          return "odd"
+        } 
+      })
+      return result;
     }
 
     // 🧪 TESTS, do not work below this line
